# public/swagger.yaml
@@ -125,7 +125,7 @@ components:
           format: uuid
         patientId:
           type: string
-        doctorId:
+        doctorName:
           type: string
         date:
           type: string
@@ -138,7 +138,7 @@ components:
       required:
         - id
         - patientId
-        - doctorId
+        - doctorName
         - date
         - status
     AppointmentCreate:
